Fix the profile frame out of bounds

--- a/app.css
+++ b/app.css
@@ -465,6 +465,10 @@ body {
     padding: 20px 0px;
     font-size: 2rem;
   }
+
+  .text-block h2 {
+    font-size: 1.5rem;
+  }
 }
 
 .fourthSection {
@@ -551,6 +555,27 @@ body {
   }
 }
 
+@media (max-width: 480px){
+    .about-container {
+    flex-direction: column;
+    align-items: center;
+    margin: 60px 20px;
+    gap: 40px;
+  }
+
+  .about-container .my-img{
+    width: 100%;
+    height: 330px;
+  }
+  
+  .detail-Section {
+    margin-top: 60px;
+    
+  }
+  .detail-Section h2 {
+    font-size: 2rem;
+  }
+}
 /* === SMOOTH SCROLLING === */
 html {
   scroll-behavior: smooth;
@@ -677,10 +702,7 @@ footer hr {
     margin-top: 10px;
     
   }
-  .links a {
-text-decoration: none;
-color: white;
-  }
+
 
   footer hr {
   border: none;
